Make chat rooms greate again

--- a/src/server/views/client.html
+++ b/src/server/views/client.html
@@ -11,5 +11,6 @@
 	<div id="main"></div>
 	<script defer src="/vendor.js"></script>
 	<script defer src="/browser.js"></script>
+	<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIL1IXJ4KSJ-WBPXdmmIzEqohWH1fp5GQ&libraries=places"></script>
 </body>
 </html>
